--- a/examples/from-json.html
+++ b/examples/from-json.html
@@ -11,6 +11,7 @@
 </div>
 
 <script type="text/javascript" src="../build/vr.dev.js" charset="utf-8"></script>
+<!--<script src="//nrfm.github.io/webvr-starter-kit/build/vr.js" charset="utf-8" >-->
 <script type="text/javascript" src="../node_modules/lodash" charset="utf-8"></script>
 <script type="text/javascript">
     var sceneData = {
@@ -29,10 +30,29 @@
                 "widthSegments": 1,
                 "heightSegments": 1,
                 "depthSegments": 1
+            },
+            {
+                "uuid": "A0DB1CCB-7FDE-4B1E-AFFD-9BB61350AC21",
+                "type": "SphereGeometry",
+                "radius": 2,
+                "widthSegments": 32,
+                "heightSegments": 16,
+                "phiStart": 0,
+                "phiLength": 6.28,
+                "thetaStart": 0,
+                "thetaLength": 3.14
             }],
         "materials": [
             {
                 "uuid": "CF5E11A7-8735-4ED5-ACB5-C3921EE88502",
+                "type": "MeshPhongMaterial",
+                "color": 12123332,
+                "emissive": 0,
+                "specular": 1118481,
+                "shininess": 30
+            },
+            {
+                "uuid": "4E1ABD5D-7F20-4503-A2BD-E3ECDFC0ECE9",
                 "type": "MeshPhongMaterial",
                 "color": 16777215,
                 "emissive": 0,
@@ -43,7 +63,7 @@
             "uuid": "3741222A-BD8F-401C-A5D2-5A907E891896",
             "type": "Scene",
             "name": "Scene",
-            "matrix": [1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1],
+            "matrix": [1,0,0,0,0,1,0,0,0,0,1,0,0,0,0,1],
             "children": [
                 {
                     "uuid": "C5CEF24E-FC0F-4EFC-A2B5-528559BF7269",
@@ -51,18 +71,58 @@
                     "name": "Box 1",
                     "geometry": "E2B3AA24-60C7-43C9-AD10-BD3B7D9D4AAF",
                     "material": "CF5E11A7-8735-4ED5-ACB5-C3921EE88502",
-                    "matrix": [0.2096792757511139, -0.17109014093875885, 0.9626851677894592, 0, 0.4504367709159851, 0.8907762765884399, 0.060202229768037796, 0, -0.867837131023407, 0.42100563645362854, 0.2638426125049591, 0, 0, 2, -2, 1]
+                    "matrix": [0.20967929065227509,-0.17109015583992004,0.9626851677894592,0,0.4504367709159851,0.8907762765884399,0.060202229768037796,0,-0.867837131023407,0.42100563645362854,0.2638426423072815,0,0,2,-2.6439545154571533,1]
+                },
+                {
+                    "uuid": "5DFC55A0-9150-4857-9806-6BC66DBEE97C",
+                    "type": "Mesh",
+                    "name": "Box 1",
+                    "geometry": "E2B3AA24-60C7-43C9-AD10-BD3B7D9D4AAF",
+                    "material": "CF5E11A7-8735-4ED5-ACB5-C3921EE88502",
+                    "matrix": [0.20967929065227509,-0.17109015583992004,0.9626851677894592,0,0.4504367709159851,0.8907762765884399,0.060202229768037796,0,-0.867837131023407,0.42100563645362854,0.2638426423072815,0,0,2,2.2189791202545166,1]
+                },
+                {
+                    "uuid": "2E8ACD4D-8851-4E81-BDB8-A4C774A2BC92",
+                    "type": "Mesh",
+                    "name": "Box 1",
+                    "geometry": "E2B3AA24-60C7-43C9-AD10-BD3B7D9D4AAF",
+                    "material": "CF5E11A7-8735-4ED5-ACB5-C3921EE88502",
+                    "matrix": [0.20967929065227509,-0.17109015583992004,0.9626851677894592,0,0.4504367709159851,0.8907762765884399,0.060202229768037796,0,-0.867837131023407,0.42100563645362854,0.2638426423072815,0,1.8959485292434692,2.002139091491699,0.0617460273206234,1]
+                },
+                {
+                    "uuid": "BF3794A1-4806-4336-8B49-3DDE54880C20",
+                    "type": "Mesh",
+                    "name": "Sphere 1",
+                    "geometry": "A0DB1CCB-7FDE-4B1E-AFFD-9BB61350AC21",
+                    "material": "4E1ABD5D-7F20-4503-A2BD-E3ECDFC0ECE9",
+                    "matrix": [1,0,0,0,0,1,0,0,0,0,1,0,-8.001365661621094,2,2,1]
                 }]
         }
-    }
+    };
 </script>
 
 
 <script type="text/javascript">
 
     VR_ENGINE.kickStart('vr-container', sceneData);
-    VR.floor();
-    VR.box();
+    VR.floor().setMaterial('wood');
+
+
+//    var box = VR.box();
+//    VR.animate(function (delta) {
+//        console.log( '::()' );
+//        box.rotateY(delta * Math.PI);
+//    });
+
+//
+//    VR.animate(function(){
+//        VR.body.rotateY(.1);
+//    });
+//
+//    VR.animate(function(){
+//        console.log( '::()>> ' );
+//        VR.body.rotateY(.1);
+//    });
 
 </script>
 </body>
