--- a/examples/from-json.html
+++ b/examples/from-json.html
@@ -104,7 +104,7 @@
 
 <script type="text/javascript">
 
-    VR_ENGINE.kickStart('vr-container', sceneData);
+    VR_ENGINE.kickStart(null, sceneData);
     VR.floor().setMaterial('wood');
 
 
