--- a/examples/from-json.html
+++ b/examples/from-json.html
@@ -10,7 +10,7 @@
 
 </div>
 
-<script type="text/javascript" src="../build/vr.dev.js" charset="utf-8"></script>
+<script type="text/javascript" src="../build/vr.js" charset="utf-8"></script>
 <!--<script src="//nrfm.github.io/webvr-starter-kit/build/vr.js" charset="utf-8" >-->
 <script type="text/javascript" src="../node_modules/lodash" charset="utf-8"></script>
 <script type="text/javascript">
