--- a/examples/from-json.html
+++ b/examples/from-json.html
@@ -15,6 +15,7 @@
 <script type="text/javascript" src="../node_modules/lodash" charset="utf-8"></script>
 <script type="text/javascript">
     var sceneData = {
+
         "metadata": {
             "version": 4.3,
             "type": "Object",
@@ -108,7 +109,7 @@
     VR.floor().setMaterial('wood');
 
 
-//    var box = VR.box();
+    var box = VR.box();
 //    VR.animate(function (delta) {
 //        console.log( '::()' );
 //        box.rotateY(delta * Math.PI);
