stopped css from being added before initing and removed body as target of css for container

--- a/examples/from-json.html
+++ b/examples/from-json.html
@@ -64,7 +64,7 @@
             "uuid": "3741222A-BD8F-401C-A5D2-5A907E891896",
             "type": "Scene",
             "name": "Scene",
-            "matrix": [1,0,0,0,0,1,0,0,0,0,1,0,0,0,0,1],
+            "matrix": [1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1],
             "children": [
                 {
                     "uuid": "C5CEF24E-FC0F-4EFC-A2B5-528559BF7269",
@@ -72,7 +72,7 @@
                     "name": "Box 1",
                     "geometry": "E2B3AA24-60C7-43C9-AD10-BD3B7D9D4AAF",
                     "material": "CF5E11A7-8735-4ED5-ACB5-C3921EE88502",
-                    "matrix": [0.20967929065227509,-0.17109015583992004,0.9626851677894592,0,0.4504367709159851,0.8907762765884399,0.060202229768037796,0,-0.867837131023407,0.42100563645362854,0.2638426423072815,0,0,2,-2.6439545154571533,1]
+                    "matrix": [0.20967929065227509, -0.17109015583992004, 0.9626851677894592, 0, 0.4504367709159851, 0.8907762765884399, 0.060202229768037796, 0, -0.867837131023407, 0.42100563645362854, 0.2638426423072815, 0, 0, 2, -2.6439545154571533, 1]
                 },
                 {
                     "uuid": "5DFC55A0-9150-4857-9806-6BC66DBEE97C",
@@ -80,7 +80,7 @@
                     "name": "Box 2",
                     "geometry": "E2B3AA24-60C7-43C9-AD10-BD3B7D9D4AAF",
                     "material": "CF5E11A7-8735-4ED5-ACB5-C3921EE88502",
-                    "matrix": [0.20967929065227509,-0.17109015583992004,0.9626851677894592,0,0.4504367709159851,0.8907762765884399,0.060202229768037796,0,-0.867837131023407,0.42100563645362854,0.2638426423072815,0,0,2,2.2189791202545166,1]
+                    "matrix": [0.20967929065227509, -0.17109015583992004, 0.9626851677894592, 0, 0.4504367709159851, 0.8907762765884399, 0.060202229768037796, 0, -0.867837131023407, 0.42100563645362854, 0.2638426423072815, 0, 0, 2, 2.2189791202545166, 1]
                 },
                 {
                     "uuid": "2E8ACD4D-8851-4E81-BDB8-A4C774A2BC92",
@@ -88,7 +88,7 @@
                     "name": "Box 3",
                     "geometry": "E2B3AA24-60C7-43C9-AD10-BD3B7D9D4AAF",
                     "material": "CF5E11A7-8735-4ED5-ACB5-C3921EE88502",
-                    "matrix": [0.20967929065227509,-0.17109015583992004,0.9626851677894592,0,0.4504367709159851,0.8907762765884399,0.060202229768037796,0,-0.867837131023407,0.42100563645362854,0.2638426423072815,0,1.8959485292434692,2.002139091491699,0.0617460273206234,1]
+                    "matrix": [0.20967929065227509, -0.17109015583992004, 0.9626851677894592, 0, 0.4504367709159851, 0.8907762765884399, 0.060202229768037796, 0, -0.867837131023407, 0.42100563645362854, 0.2638426423072815, 0, 1.8959485292434692, 2.002139091491699, 0.0617460273206234, 1]
                 },
                 {
                     "uuid": "BF3794A1-4806-4336-8B49-3DDE54880C20",
@@ -96,7 +96,7 @@
                     "name": "Sphere 1",
                     "geometry": "A0DB1CCB-7FDE-4B1E-AFFD-9BB61350AC21",
                     "material": "4E1ABD5D-7F20-4503-A2BD-E3ECDFC0ECE9",
-                    "matrix": [1,0,0,0,0,1,0,0,0,0,1,0,-8.001365661621094,2,2,1]
+                    "matrix": [1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -8.001365661621094, 2, 2, 1]
                 }]
         }
     };
@@ -105,43 +105,21 @@
 
 <script type="text/javascript">
 
-    VR_ENGINE.kickStart(null, sceneData);
+    VR_ENGINE.kickStart('vr-container', sceneData);
     var sky = VR.sky();
     VR.floor();
-
     VR.box().setMaterial('wood').moveUp(0.5);
 
 
-//    VR_ENGINE.kickStart(null, sceneData);
-//    VR.floor().setMaterial('wood');
-
-
-//    var box = VR.box();
-
-
     /*
-    * animation
-    * */
-//
-    VR_ENGINE.mousetrap.bind('up', function() {
-        console.log( '::() up' );
-        VR.body.moveZ(-0.2);
-    });
-    VR_ENGINE.mousetrap.bind('down', function() {
-        VR.body.moveZ(0.2);
-    });
-    VR_ENGINE.mousetrap.bind('left', function() {
-        VR.body.rotateY(0.05);
-    });
-    VR_ENGINE.mousetrap.bind('right', function() {
-        VR.body.rotateY(-0.05);
-    });
+     * animation
+     * */
+    //
 
 
-
-//    VR.animate(function (delta, time) {
-//       //console.log( '::()' );
-//    });
+    //    VR.animate(function (delta, time) {
+    //       //console.log( '::()' );
+    //    });
 
 </script>
 </body>
