new build making outer container 100%

--- a/examples/b3nchComponent.html
+++ b/examples/b3nchComponent.html
@@ -4,13 +4,22 @@
     <meta charset="utf-8">
     <title>WebVR Starter Kit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <style type="text/css">
+        .metacontainer{
+            width: 300px;
+            height: 300px;
+        }
+    </style>
 </head>
 <body>
-<div id='outer'>
-    <div id="vr-container">
+<div class="metacontainer">
+    <div id='outer'>
+        <div id="vr-container">
 
+        </div>
     </div>
 </div>
+]
 
 <script type="text/javascript" src="../build/vr.dev.js" charset="utf-8"></script>
 <!--<script src="//nrfm.github.io/webvr-starter-kit/build/vr.js" charset="utf-8">-->
