--- a/examples/b3nchComponent.html
+++ b/examples/b3nchComponent.html
@@ -5,21 +5,21 @@
     <title>WebVR Starter Kit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <style type="text/css">
-        .metacontainer{
-            width: 300px;
-            height: 300px;
+        .metacontainer {
+            width: 600px;
+            height: 600px;
         }
     </style>
 </head>
 <body>
 <div class="metacontainer">
-    <div id='outer'>
+    <!--<div id='outer'>-->
         <div id="vr-container">
 
         </div>
-    </div>
+    <!--</div>-->
 </div>
-]
+
 
 <script type="text/javascript" src="../build/vr.dev.js" charset="utf-8"></script>
 <!--<script src="//nrfm.github.io/webvr-starter-kit/build/vr.js" charset="utf-8">-->
