--- a/examples/b3nchComponent.html
+++ b/examples/b3nchComponent.html
@@ -21,8 +21,8 @@
 </div>
 
 
-<script type="text/javascript" src="../build/vr.dev.js" charset="utf-8"></script>
-<!--<script src="//nrfm.github.io/webvr-starter-kit/build/vr.js" charset="utf-8">-->
+<!--<script type="text/javascript" src="../build/vr.dev.js" charset="utf-8"></script>-->
+<script src="//nrfm.github.io/webvr-starter-kit/build/vr.js" charset="utf-8">
 <script type="text/javascript" src="../node_modules/lodash" charset="utf-8"></script>
 <script type="text/javascript">
     var sceneData = {
