moved css of canvas into vr container

--- a/examples/b3nchComponent.html
+++ b/examples/b3nchComponent.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <style type="text/css">
         .metacontainer {
+            position: relative;
             width: 600px;
             height: 600px;
+
+            left: 0;
+            top: 0;
         }
     </style>
 </head>
@@ -21,8 +25,8 @@
 </div>
 
 
-<!--<script type="text/javascript" src="../build/vr.dev.js" charset="utf-8"></script>-->
-<script src="//nrfm.github.io/webvr-starter-kit/build/vr.js" charset="utf-8">
+<script type="text/javascript" src="../build/vr.dev.js" charset="utf-8"></script>
+<!--<script src="//nrfm.github.io/webvr-starter-kit/build/vr.js" charset="utf-8">-->
 <script type="text/javascript" src="../node_modules/lodash" charset="utf-8"></script>
 <script type="text/javascript">
     var sceneData = {
